# Deep-Learning-Project

./: .gitignore  ANALYSIS_ROADMAP.md  README.md  doc.tex  pyproject.toml  requirements.txt
experiments/: results_summary.csv
experiments/A1_autoencoder_mlp/: config.yaml
experiments/A2_autoencoder_ft/: config.yaml
experiments/B1_pooling_mlp/: config.yaml
experiments/B2_pooling_ft/: config.yaml
notebooks/: 00_data_inspection.ipynb  01_preprocessing.ipynb  02_multirocket.ipynb  03_autoencoder.ipynb  04_structured_pooling.ipynb  05_mlp_models.ipynb  06_ft_transformer.ipynb  07_results_report.ipynb  08_convtran_amp.ipynb
scripts/: list_dx_codes.py
src/: __init__.py
src/data/: __init__.py  io.py  preprocessing.py  splits.py
src/features/: __init__.py  memmap.py  multirocket.py  pooling.py  scaling.py
src/models/: __init__.py  autoencoder.py  ft_transformer.py  mlp.py
src/training/: __init__.py  callbacks.py  evaluation.py  train.py
src/utils/: __init__.py  config.py  logging.py  paths.py  seed.py
